Tweak alignment of clipboard icon and fix overflow behaviour

--- a/src/h5web/breadcrumbs/BreadcrumbsBar.module.css
+++ b/src/h5web/breadcrumbs/BreadcrumbsBar.module.css
@@ -14,7 +14,7 @@
   overflow: hidden;
   min-width: 0;
   margin-bottom: 0;
-  padding: 0 0.25rem;
+  padding: 0 1rem;
   font-size: inherit;
   font-weight: inherit;
   line-height: 1.3; /* fix cropping of glyphs */
@@ -23,9 +23,16 @@
 
 .crumbButton {
   composes: btn-clean from global;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  min-width: 0;
+}
+
+.crumbButton[data-current] {
+  flex: none; /* never shrink current breadcrumb */
+  font-weight: 600;
 }
 
 .crumbButton:hover {
@@ -38,13 +45,8 @@
   text-overflow: ellipsis;
 }
 
-.crumb[data-current] {
-  flex: none; /* never shrink current breadcrumb */
-  font-weight: 600;
-  margin-right: 1rem;
-}
-
 .separator {
+  flex: none;
   min-width: 0.75rem;
 }
 
@@ -87,8 +89,11 @@
 .copyIcon {
   position: absolute;
   display: none;
-  font-size: 1rem;
-  padding-bottom: 0.125rem;
+  font-size: 0.9rem;
+  top: 50%;
+  right: -0.125rem;
+  margin: 1px 0;
+  transform: translate(100%, -50%);
 }
 
 .crumbButton:hover > .copyIcon {
